2025-03-15 Benedikt Freisen <b.freisen AT gmx.net>

	* src/SDCC.y:
	  Change parameter_declaration and type_name productions to match the C standard.
	* support/regression/get_ticks.py:
	  Address a deprecation warning.

2025-03-15 Gabriele Gorla <gorlik@yahoo.com>

    * src/mos6502/gen.c:
      Improve genLeftShiftLiteral and genRightShiftLiteral.
      Improve genReceive.
      Prepare for register tracking.
      Improve genRRC.
      Improve genPlus.
      Enable simple register tracking.

2025-03-15 Benedikt Freisen <b.freisen AT gmx.net>

	* doc/sdccman.lyx:
	  Optimize the page format for on-screen reading.

2025-03-11 Gabriele Gorla <gorlik@yahoo.com>

    * src/mos6502/gen.c:
      Improve stack management.

2025-03-10 Gabriele Gorla <gorlik@yahoo.com>

    * src/mos6502/gen.c:
      Rewrite genrsh32.
      
2025-03-09 Gabriele Gorla <gorlik@yahoo.com>

    * src/z80/main.c,
      src/mos6502/main.c,
      src/hc08/main.c,
      src/SDCCglue.c,
      src/SDCCmem.h:
      Move port specific assembler directives to genAssemblerStart.

2025-03-09 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/stm8/gen.c,
	  src/f8/gen.c:
	  Fix bug #3841.

2025-03-08 Gabriele Gorla <gorlik@yahoo.com>

    * src/mos6502/gen.c:
      More cosmetic changes to match sdcc coding style.

2025-03-08 Benedikt Freisen <b.freisen AT gmx.net>

	* device/include/stdcountof.h,
	  doc/sdccman.lyx,
	  src/SDCC.lex,
	  src/SDCC.y,
	  src/SDCCast.c,
	  src/SDCCast.h,
	  src/SDCCerr.c,
	  src/SDCCerr.h,
	  src/SDCCsymt.c,
	  src/SDCCsymt.h,
	  support/regression/tests/countof.c,
	  support/regression/tests/lengthof.c:
	  Rename _Lengthof to _Countof/countof (C2y, n3469, see RFE #978).

2025-03-04 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCralloc.hpp,
	  src/stm8/gen.c:
	  Improve some comments about the stm8 division hardware bug workaround.

2025-03-03 Gabriele Gorla <gorlik@yahoo.com>

    * src/mos6502/gen.c: