@@ -340,6 +340,7 @@ enum {
   E_CLOSING_BRACE               = 310, /* invalid character or end of string encountered before '}' */
   E_INVALID_OCTAL               = 311, /* \o{...} used without valid octal digits */
   E_SELECTION_DECLARATION_C2Y   = 312, /* declaration within selection header requires ISO C2y or later */
+  E_COMPLIT_SCLASS_C23          = 313, /* compound literals with storage class specifier require ISO C23 or later */
 
   /* don't touch this! */
   NUMBER_OF_ERROR_MESSAGES             /* Number of error messages */
